added original plugin's enviornment setting in env.template

--- a/.env.template
+++ b/.env.template
@@ -216,3 +216,7 @@ DENYLISTED_PLUGINS=
 ################################################################################
 # CHAT_MESSAGES_ENABLED - Enable chat messages (Default: False)
 # CHAT_MESSAGES_ENABLED=False
+
+## paruparu orginal plugin env for "gpt4 plugin"
+# OPENAI_API_KEY_PLUGIN = your api key
+# GPT_MODEL_PLUGIN = gpt-4
