--- a/prompt_settings.yaml
+++ b/prompt_settings.yaml
@@ -6,7 +6,8 @@ constraints: [
 ]
 resources: [
   'Internet access for searches and information gathering.',
-  'Long Term memory management.',
+  #'Long Term memory management.',
+  'using gpt4 gives you longer and rich return',
   'GPT-3.5 powered Agents for delegation of simple tasks.',
   'File output.'
 ]
@@ -14,6 +15,7 @@ performance_evaluations: [
   'Continuously review and analyze your actions to ensure you are performing to the best of your abilities.',
   'Constructively self-criticize your big-picture behavior constantly.',
   'Reflect on past decisions and strategies to refine your approach.',
-  'Every command has a cost, so be smart and efficient. Aim to complete tasks in the least number of steps.',
+  'Aim to complete tasks with the best quality and rich output',
+  #'Every command has a cost, so be smart and efficient. Aim to complete tasks in the least number of steps.',
   'Write all code to a file.'
 ]
